--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente Desarrollo
-configuracion.autor.nombre=Christian
-configuracion.autor.email=christian@mail.com
+configuracion.texto=Configurando entorno Desarrollo
+configuracion.autor.nombre=Pepe
+configuracion.autor.email=pepe@mail.com
